feat: add /api/exist
