# backend/docs/swagger.json
@@ -4,6 +4,38 @@
         "contact": {}
     },
     "paths": {
+        "/exist": {
+            "get": {
+                "description": "get ip if id exist",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Safeline"
+                ],
+                "summary": "get ip if id exist",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/repos/discussions": {
             "get": {
                 "description": "get discussions from GitHub",
