# backend/internal/handler/safeline.go
@@ -34,3 +34,21 @@ func (h *SafelineHandler) GetInstallerCount(c *gin.Context) {
 	}
 	c.JSON(200, count)
 }
+
+// GetExist return ip if id exist
+// @Summary get ip if id exist
+// @Description get ip if id exist
+// @Tags Safeline
+// @Accept json
+// @Produce json
+// @Param id query string true "id"
+// @Success 200 {object} string
+// @Router /exist [get]
+func (h *SafelineHandler) GetExist(c *gin.Context) {
+	ip, err := h.safelineService.GetExist(c, c.Query("id"))
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(200, gin.H{"ip": ip})
+}
