# backend/main.go
@@ -53,6 +53,7 @@ func main() {
 	safelineService := service.NewSafelineService(telemetryHost)
 	safelineHandler := handler.NewSafelineHandler(safelineService)
 	v1.GET("/safeline/count", safelineHandler.GetInstallerCount)
+	v1.GET("/exist", safelineHandler.GetExist)
 
 	docs.SwaggerInfo.BasePath = v1.BasePath()
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
